<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="none">

        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_profile" />

    </group>

    <item android:title="Pengaturan">
        <menu>

            <item
                android:id="@+id/nav_dark_mode"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/nav_dark_mode"
                android:checkable="true"
                app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

            <item
                android:id="@+id/nav_hide_nominal"
                android:icon="@android:drawable/ic_secure"
                android:title="@string/nav_hide_nominal"
                android:checkable="true"
                app:actionViewClass="androidx.appcompat.widget.SwitchCompat" />

        </menu>
    </item>

    <item android:title="Lainnya">
        <menu>

            <item
                android:id="@+id/nav_about"
                android:icon="@android:drawable/ic_menu_info_details"
                android:title="@string/nav_about" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:title="@string/nav_logout" />

        </menu>
    </item>

</menu>
